--- a/Insights.html
+++ b/Insights.html
@@ -23,7 +23,7 @@
             <div class="desk">
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="desk">
-                        <a href="./main.html"> <img src="./assets/blackLogo.png" alt="" class="logo"></a>
+                        <a href="./index.html"> <img src="./assets/blackLogo.png" alt="" class="logo"></a>
 
                     </div>
                    
@@ -56,7 +56,7 @@
                         <img src="./assets/menu.png" alt="">
                     </div>
                     <div class="">
-                        <a href="./main.html"><img src="./assets/blackLogo.png" alt="" class="logo w-100" alt=""></a>
+                        <a href="./index.html"><img src="./assets/blackLogo.png" alt="" class="logo w-100" alt=""></a>
                     </div>
                     <div>
                         <img src="./assets/search.png" alt="">
