--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="desk">
             <div class="d-flex justify-content-between align-items-center">
                 <div>
-                    <a href="./main.html"> <img src="./assets/blackLogo.png" alt="" class="logo"></a>
+                    <a href="./index.html"> <img src="./assets/blackLogo.png" alt="" class="logo"></a>
                    
                 </div>
                 <div>
