--- a/career.html
+++ b/career.html
@@ -190,7 +190,7 @@
                     <p class="mb-0">Welcoming each other’s authentic selves to strengthen our organisation and broaden our perspectives.</p>
                 </div>
             </div>
-            <div class="col-md-4 ">
+            <div class="col-md-4 mb-4">
                 <div class="p-4 bgaibox text-white">
 
                     <img src="./assets/ia1.png" class="mb-4" alt="">
@@ -199,7 +199,7 @@
                     <p class="mb-0">Welcoming each other’s authentic selves to strengthen our organisation and broaden our perspectives.</p>
                 </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
             <div class="p-4 bgaibox text-white">
 
                 <img src="./assets/ia1.png" class="mb-4" alt="">
