--- a/contactus.html
+++ b/contactus.html
@@ -90,50 +90,57 @@
                                         Solutions.</h1>
                                 </div>
 
-                                <div class="row mb-5">
-                                    <div class="col-md-6 mb-3">
+                                <div class="row marbb">
+                                    <div class="col-md-6 col-12 mb-3">
                                         <div class="formtosubmit">
                                             <label for="">First Name*</label> <br>
-                                            <input type="text" placeholder="First Name*">
+                                            <input type="text" class="w-100" placeholder="First Name*">
                                         </div>
                                           
                                     </div>
 
-                                    <div class="col-md-6 mb-3">
+                                    <div class="col-md-6  col-12  mb-3">
                                         <div class="formtosubmit">
                                             <label for="">Last Name*</label> <br>
-                                            <input type="text" placeholder="Enter last name">
+                                            <input type="text" class="w-100" placeholder="Enter last name">
                                         </div>
                                     </div>
-                                    <div class="col-md-6 mb-3">
+                                    <div class="col-md-6  col-12  mb-3">
                                         <div class="formtosubmit">
                                             <label for="">Email*</label> <br>
-                                            <input type="text" placeholder="Enter email address">
+                                            <input type="text" class="w-100" placeholder="Enter email address">
                                         </div>
                                     </div>
-                                    <div class="col-md-6 mb-3">
+                                    <div class="col-md-6  col-12  mb-3">
                                         <div class="formtosubmit">
                                             <label for="">Mobile number</label> <br>
-                                            <input type="text" placeholder="Enter 10 digit mobile number">
+                                            <input type="text" class="w-100" placeholder="Enter 10 digit mobile number">
                                         </div>
                                     </div>
-                                    <div class="col-md-6 ">
+                                    <div class="col-md-6  col-12 ">
                                         <div class="formtosubmit">
                                             <label for="">Company Name (Optional)</label> <br>
-                                            <input type="text" placeholder="Enter company name">
+                                            <input type="text" class="w-100" placeholder="Enter company name">
                                         </div>
                                     </div>
-                                    <div class="col-md-6 ">
+                                    <div class="col-md-6  col-sm-12  ">
                                         <div class="formtosubmit">
                                             <label for="">Designation (Optional)</label> <br>
-                                            <input type="text" placeholder="Enter your designation">
+                                            <input type="text" class="w-100" placeholder="Enter your designation">
                                         </div>
                                     </div>
                                      
                                 </div>
 
-                                <div>
-                                    <button class="buttonCommon justify-content-center submitbuttoN bg-dark text-light d-flex">
+                                <div class="desk">
+                                    <button class="buttonCommon mb-3 justify-content-center submitbuttoN bg-dark text-light d-flex">
+                                        Submit
+                                        <img src="./assets/buttonarrow.png" alt="">
+                                    </button>
+                                </div>
+
+                                <div class="mob">
+                                    <button class="buttonCommon w-100 mb-3 justify-content-center submitbuttoN bg-dark text-light d-flex">
                                         Submit
                                         <img src="./assets/buttonarrow.png" alt="">
                                     </button>
