--- a/aboutus.html
+++ b/aboutus.html
@@ -120,7 +120,7 @@
 
             <div class="row">
 
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                         <div class="p-4 bgaibox text-white">
 
                             <img src="./assets/ia1.png" class="mb-4" alt="">
@@ -130,7 +130,7 @@
                         </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                     <div class="p-4 bgaibox text-white">
 
                         <img src="./assets/ia1.png" class="mb-4" alt="">
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 
-                <div class="col-md-4">
+                <div class="col-md-4 ">
                     <div class="p-4 bgaibox text-white">
 
                         <img src="./assets/ia1.png" class="mb-4" alt="">
