--- a/services.html
+++ b/services.html
@@ -115,8 +115,12 @@
                 <h1 class="font400">Realizing your real estate vision with <br> comprehensive solutions.</h1>
             </div>
 
-            <div>
+            <div class="desk">
                 <img src="./assets/aboutBannerpage.png" class="w-100" alt="">
+            </div>
+
+            <div class="mob">
+                <img src="./assets/sres.png" class="w-100" alt="">
             </div>
         </div>
     </section>
